BABEL_ERROR
SyntaxError: /home/luka99/Dokumente/Projekte/Bachelorarbeit/results/modules/abs2/src/lib/index.js: Unexpected token, expected "(" (17:12)

[0m [90m 15 |[39m [90m * @return {String} The absolute path.[39m[0m
[0m [90m 16 |[39m [90m */[39m[0m
[0m[31m[1m>[22m[39m[90m 17 |[39m [36mfunction[39m abs[{{]]]}jl(input) {[0m
[0m [90m    |[39m             [31m[1m^[22m[39m[0m
[0m [90m 18 |[39m     [36mif[39m ([33m![39minput) { [36mreturn[39m process[33m.[39mcwd()[33m;[39m }[0m
[0m [90m 19 |[39m     [36mif[39m (input[33m.[39mcharAt([35m0[39m) [33m===[39m [32m"/"[39m) { [36mreturn[39m input[33m;[39m }[0m
[0m [90m 20 |[39m     [36mif[39m (input[33m.[39mcharAt([35m0[39m) [33m===[39m [32m"~"[39m [33m&&[39m input[33m.[39mcharAt([35m1[39m) [33m===[39m [32m"/"[39m) {[0m
    at Parser._raise (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:810:17)
    at Parser.raiseWithData (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:803:17)
    at Parser.raise (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:764:17)
    at Parser.unexpected (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:9980:16)
    at Parser.expect (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:9954:28)
    at Parser.parseFunctionParams (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:13336:10)
    at Parser.parseFunction (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:13316:10)
    at Parser.parseFunctionStatement (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:12953:17)
    at Parser.parseStatementContent (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:12634:21)
    at Parser.parseStatement (/home/luka99/Dokumente/Projekte/Bachelorarbeit/run-time-information-gathering-tests/node_modules/@babel/parser/lib/index.js:12596:17) {
  loc: Position { line: 17, column: 12 },
  pos: 324,
  code: 'BABEL_PARSE_ERROR',
  reasonCode: 'UnexpectedToken'
}
